[package]
name = 'sfz'
version = '0.0.0'
authors = ['Matthias Fauconneau <matthias.fauconneau@gmail.com>']
edition = '2018'

[dependencies]
anyhow = ''
fehler = ''
framework = { version = '', path = '../../framework' }
#nom = ''
lexical-core = ''
serde = { version = '', features = ['derive'] }
vmap = { version = '', path = '../../vmap' }
